[gd_scene load_steps=6 format=3 uid="uid://cqidgbor72dm4"]

[ext_resource type="Script" uid="uid://c6h3x81nts60x" path="res://scripts/Main.gd" id="1"]
[ext_resource type="Script" uid="uid://dcpw4651y3en5" path="res://scripts/Board.gd" id="2"]
[ext_resource type="TileSet" uid="uid://bk4mjfkyyhxok" path="res://assets/tiles.tres" id="2_vcsgt"]
[ext_resource type="Script" uid="uid://bqucx7hveladw" path="res://scripts/Player.gd" id="3"]
[ext_resource type="Script" uid="uid://cb56n4oj5ftbj" path="res://scripts/UI.gd" id="4"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Board" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_vcsgt")
script = ExtResource("2")
weeds_layer_path = NodePath("../Weeds")

[node name="Cursor" type="Node2D" parent="."]
script = ExtResource("3")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4")

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 8.0
offset_top = 8.0
text = "Score: 0"

[node name="TimerBar" type="ProgressBar" parent="UI"]
offset_left = 8.0
offset_top = 32.0
offset_right = 248.0
offset_bottom = 52.0
value = 100.0

[node name="TurnLabel" type="Label" parent="UI"]
offset_left = 8.0
offset_top = 56.0

[node name="RestartButton" type="Button" parent="UI"]
visible = false
offset_left = 8.0
offset_top = 84.0
text = "Restart"

[node name="DebugLabel" type="Label" parent="UI"]
modulate = Color(1, 1, 1, 0.85)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 8.0
horizontal_alignment = 2

[node name="PauseOverlay" type="ColorRect" parent="UI"]
visible = false
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="Center" type="CenterContainer" parent="UI/PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="UI/PauseOverlay/Center"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="TurnTimer" type="Timer" parent="."]

[node name="Weeds" type="TileMapLayer" parent="."]
z_index = 10
tile_set = ExtResource("2_vcsgt")
